# finance-analyzer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/: app.py
src/analysis/: financial_metrics.py
src/api/: file_processing.py
src/extract/: dataframe_reader.py  extractor.py  json_reader.py  pdf_reader.py
src/pages/: file_upload.py  home.py
src/utils/: logger.py
tests/api/: test_file_processing.py
tests/extract/: test_dataframe_reader.py  test_extractor.py  test_json_reader.py  test_pdf_reader.py
tests/pages/: test_file_upload.py
