[project]
name = "finance-analyzer"
version = "0.0.1"
description = "A AI-based system for analyzing financial and business reports."
authors = [{name = "Alexandre Oliveira", email = "alext.oliver24@gmail.com"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.5",
    "plotly>=6.0.0",
    "pytesseract>=0.3.13",
    "streamlit>=1.43.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.0",
]
